--- a/app/src/main/res/xml/activity_onboarding_scene.xml
+++ b/app/src/main/res/xml/activity_onboarding_scene.xml
@@ -372,13 +372,15 @@
             android:alpha="1"
             motion:layout_constraintBottom_toTopOf="@+id/menu2"
             motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintStart_toStartOf="parent" />
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@+id/btnStarted"
+            android:layout_marginTop="8dp" />
         <Constraint
             android:id="@+id/btnStarted"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:alpha="1"
             motion:layout_constraintBottom_toTopOf="@+id/menu2"
@@ -386,7 +388,7 @@
             motion:layout_constraintHorizontal_bias="0.0"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toBottomOf="@+id/descMenu4"
-            motion:layout_constraintVertical_bias="0.0" />
+            motion:layout_constraintVertical_bias="0.141" />
     </ConstraintSet>
     <Transition
         motion:constraintSetEnd="@+id/menu4"
