--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                app:boxBackgroundColor="@color/gray_200">
+                app:boxBackgroundColor="@color/gray_100">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_temperature"
@@ -68,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                app:boxBackgroundColor="@color/gray_200">
+                app:boxBackgroundColor="@color/gray_100">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_humidity"
@@ -93,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                app:boxBackgroundColor="@color/gray_200">
+                app:boxBackgroundColor="@color/gray_100">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_moisture"
@@ -146,7 +146,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                app:boxBackgroundColor="@color/gray_200">
+                app:boxBackgroundColor="@color/gray_100">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_nitrogen"
@@ -171,7 +171,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                app:boxBackgroundColor="@color/gray_200">
+                app:boxBackgroundColor="@color/gray_100">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_potassium"
@@ -196,8 +196,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                app:boxBackgroundColor="@color/gray_200"
-                android:paddingBottom="200dp">
+                android:paddingBottom="200dp"
+                app:boxBackgroundColor="@color/gray_100">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_phosphorous"
@@ -214,10 +214,11 @@
     <Button
         android:id="@+id/btnCalculate"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_margin="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_bg_button"
         android:text="Hitung"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
