--- a/app/src/main/res/layout/item_fertilizer.xml
+++ b/app/src/main/res/layout/item_fertilizer.xml
@@ -15,8 +15,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@color/green_700">
+        android:background="@color/green_700"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/img_item_photo"
@@ -29,12 +29,12 @@
             card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            style="@style/textH1White"
             android:id="@+id/tv_item_name"
+            style="@style/textH1White"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@id/img_item_photo"
             android:textSize="16sp"
@@ -50,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="4dp"
             android:ellipsize="end"
             android:maxLines="2"
             card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
