--- a/app/src/main/res/drawable/indicator.xml
+++ b/app/src/main/res/drawable/indicator.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape
-            android:shape="oval"
-            android:thickness="4dp"
-            android:useLevel="false">
+        <shape android:shape="oval" android:thickness="4dp" android:useLevel="false">
             <solid android:color="@color/green_700"></solid>
         </shape>
     </item>
