--- a/app/src/main/res/xml/activity_onboarding_scene.xml
+++ b/app/src/main/res/xml/activity_onboarding_scene.xml
@@ -2,12 +2,6 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
-    <Transition
-        motion:autoTransition="animateToEnd"
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
-        motion:duration="1000"></Transition>
-
     <ConstraintSet android:id="@+id/start">
         <Constraint
             android:id="@+id/imageView"
@@ -31,7 +25,7 @@
         <Constraint
             android:id="@+id/logoMenu1"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="180dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -99,6 +93,7 @@
                 motion:customFloatValue="0" />
         </Constraint>
     </ConstraintSet>
+
     <ConstraintSet
         android:id="@+id/menu2"
         motion:deriveConstraintsFrom="@+id/end">
@@ -113,7 +108,7 @@
         <Constraint
             android:id="@+id/logoMenu2"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="190dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -183,11 +178,6 @@
                 motion:customFloatValue="0" />
         </Constraint>
     </ConstraintSet>
-    <Transition
-        motion:constraintSetEnd="@+id/menu2"
-        motion:constraintSetStart="@+id/end">
-        <OnSwipe motion:dragDirection="dragLeft" />
-    </Transition>
     <ConstraintSet
         android:id="@+id/menu3"
         motion:deriveConstraintsFrom="@+id/menu2">
@@ -202,7 +192,7 @@
         <Constraint
             android:id="@+id/logoMenu3"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="190dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -273,11 +263,6 @@
                 motion:customFloatValue="0" />
         </Constraint>
     </ConstraintSet>
-    <Transition
-        motion:constraintSetEnd="@+id/menu3"
-        motion:constraintSetStart="@+id/menu2">
-        <OnSwipe motion:dragDirection="dragLeft" />
-    </Transition>
     <ConstraintSet
         android:id="@+id/menu4"
         motion:deriveConstraintsFrom="@+id/menu3">
@@ -354,7 +339,7 @@
         <Constraint
             android:id="@+id/logoMenu4"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="190dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -367,20 +352,20 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="8dp"
             android:alpha="1"
             motion:layout_constraintBottom_toTopOf="@+id/menu2"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toBottomOf="@+id/btnStarted"
-            android:layout_marginTop="8dp" />
+            motion:layout_constraintTop_toBottomOf="@+id/btnStarted" />
         <Constraint
             android:id="@+id/btnStarted"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="24dp"
             android:alpha="1"
             motion:layout_constraintBottom_toTopOf="@+id/menu2"
@@ -390,6 +375,21 @@
             motion:layout_constraintTop_toBottomOf="@+id/descMenu4"
             motion:layout_constraintVertical_bias="0.141" />
     </ConstraintSet>
+    <Transition
+        motion:autoTransition="animateToEnd"
+        motion:constraintSetEnd="@+id/end"
+        motion:constraintSetStart="@id/start"
+        motion:duration="1000"></Transition>
+    <Transition
+        motion:constraintSetEnd="@+id/menu3"
+        motion:constraintSetStart="@+id/menu2">
+        <OnSwipe motion:dragDirection="dragLeft" />
+    </Transition>
+    <Transition
+        motion:constraintSetEnd="@+id/menu2"
+        motion:constraintSetStart="@+id/end">
+        <OnSwipe motion:dragDirection="dragLeft" />
+    </Transition>
     <Transition
         motion:constraintSetEnd="@+id/menu4"
         motion:constraintSetStart="@+id/menu3">
