--- a/app/src/main/res/layout/activity_guest.xml
+++ b/app/src/main/res/layout/activity_guest.xml
@@ -11,6 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:background="@drawable/rounded_component"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageButton
             android:id="@+id/imageButton3"
             android:layout_width="wrap_content"
@@ -48,15 +57,6 @@
             app:layout_constraintTop_toBottomOf="@+id/viewPager" />
 
         <TextView
-            android:id="@+id/textView7"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:background="@drawable/rounded_component"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
             android:id="@+id/tvHalo"
             style="@style/textH4White"
             android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
             style="@style/textH4White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/name"
+            android:text="@string/guest"
             app:layout_constraintBottom_toBottomOf="@+id/tvHalo"
             app:layout_constraintStart_toEndOf="@+id/tvHalo"
             app:layout_constraintTop_toTopOf="@+id/tvHalo" />
