--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -46,6 +46,7 @@
 
         <Button
             android:id="@+id/btnSave"
+            android:backgroundTint="@color/gray_500"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_margin="8dp"
