--- a/app/src/main/res/layout/activity_humidity.xml
+++ b/app/src/main/res/layout/activity_humidity.xml
@@ -5,7 +5,7 @@
     android:background="@color/gray_100"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activity.HumidityActivity">
+    tools:context=".view.activity.humadity.HumidityActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
